--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix .",
+    "format": "prettier --write \"src/**/*.js\""
   },
   "eslintConfig": {
     "extends": [
@@ -45,9 +48,20 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.24.4",
+    "@babel/preset-env": "^7.24.4",
+    "@babel/preset-react": "^7.24.1",
     "@tailwindcss/forms": "^0.5.7",
+    "@typescript-eslint/eslint-plugin": "^7.7.1",
+    "@typescript-eslint/parser": "^7.0.0",
+    "babel-loader": "^9.1.3",
+    "eslint": "^8.1.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "file-loader": "^6.2.0",
     "preline": "^2.1.0",
-    "tailwindcss": "^3.4.3"
+    "prettier": "^3.2.5",
+    "tailwindcss": "^3.4.3",
+    "ts-loader": "^8.0.20"
   }
 }
